# deimos

./: .gitignore  README.md
deimos/: Cargo.toml
deimos/src/: cli.rs  lib.dei  main.rs
deimos_ast/: Cargo.toml
deimos_ast/src/: decl.rs  expr.rs  lib.rs  loc.rs  stmt.rs  sys.rs  types.rs
deimos_codegen/: Cargo.toml
deimos_codegen/src/: const_expr.rs  error.rs  expr.rs  internal.rs  lib.rs  names.rs  scope.rs  stmt.rs
deimos_codegen/src/expr/: binary.rs  logic.rs  mod.rs  print.rs  rvalue.rs  temp.rs  unary.rs  value.rs
deimos_parser/: Cargo.toml
deimos_parser/src/: error.rs  lib.rs
deimos_parser/src/lexer/: chiter.rs  error.rs  macros.rs  mod.rs  tokens.rs  util.rs
deimos_parser/src/parser/: error.rs  macros.rs  mod.rs  tokiter.rs
deimos_parser/src/parser/expr/: mod.rs  operators.rs  shunt.rs
deimos_parser/src/parser/iter/: macros.rs  mod.rs
mips_builder/: Cargo.toml
mips_builder/src/: lib.rs  registers.rs
samples/: fizzbuzz.dei  hanoi.dei  mandelbrot.dei  mandelbrot_bmp.dei  rng_noises.dei
