[package]
name = "deimos_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deimos_ast = { version = "0.1.0", path = "../deimos_ast" }
mips_builder = { version = "0.1.0", path = "../mips_builder" }
